changes completed, person centred therapy page and pronouns

--- a/contact.html
+++ b/contact.html
@@ -6,34 +6,34 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
-  <title>Contact Us for Personalised Therapy in Menai Bridge & Anglesey | Talk with Sian</title>
+  <title>Contact Me for Personalised Therapy in Chester & Flintshire | Talk with Sian</title>
   <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
   <link href="css/contact.css" rel="stylesheet" />
 
   <meta
     name="description"
-    content="Get in touch with Talk with Sian to schedule your remote therapy session in Menai Bridge, Anglesey. We offer personalized support for women across North Wales."
+    content="Get in touch with Talk with Sian to schedule your remote therapy session in Chester & Flintshire. I offer personalised support for women."
   />
   <meta
     name="keywords"
-    content="contact therapy Menai Bridge, counselling Anglesey contact, remote therapy North Wales, mental health support Anglesey, Talk with Sian contact"
+    content="contact therapy Chester, counselling Flintshire contact, remote therapy, mental health support, Talk with Sian contact"
   />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
   <meta
     name="geo.placename"
-    content="Menai Bridge, Anglesey, North Wales"
+    content="Chester, Flintshire, Wales"
   />
-  <meta name="geo.position" content="53.2281;-4.1628" />
-  <meta name="ICBM" content="53.2281, -4.1628" />
+  <meta name="geo.position" content="53.1905;-2.8919" />
+  <meta name="ICBM" content="53.1905, -2.8919" />
   <meta
     property="og:title"
-    content="Contact Us | Talk with Sian - Personalised Therapy in Menai Bridge & Anglesey"
+    content="Contact Me | Talk with Sian – Personalised Therapy in Chester & Flintshire"
   />
   <meta
     property="og:description"
-    content="Reach out to Talk with Sian for compassionate and personalized therapy services in Menai Bridge and surrounding areas in Anglesey."
+    content="Reach out to Talk with Sian for compassionate and personalised therapy services in Chester & Flintshire."
   />
   <meta property="og:url" content="https://www.talkwithsian.com/contact" />
   <meta property="og:type" content="website" />
@@ -41,11 +41,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta
     name="twitter:title"
-    content="Contact Us | Talk with Sian - Personalised Therapy in Menai Bridge & Anglesey"
+    content="Contact Me | Talk with Sian – Personalised Therapy in Chester & Flintshire"
   />
   <meta
     name="twitter:description"
-    content="Contact Talk with Sian to start your journey to well-being with expert counselling services in Menai Bridge, Anglesey."
+    content="Contact Talk with Sian to start your journey to well-being with expert counselling services in Chester & Flintshire."
   />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
   <link rel="canonical" href="https://talkwithsian.com/contact/" />
@@ -106,7 +106,7 @@
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="eft-therapy.html">EFT Tapping</a></li>
               <li><a class="dropdown-item" href="trauma-therapy.html">Trauma Therapy</a></li>
-              <li><a class="dropdown-item" href="cbt-therapy.html">CBT Therapy</a></li>
+              <li><a class="dropdown-item" href="person-centred-therapy.html">Person Centred Therapy</a></li>
             </ul>
           </li>
 
@@ -121,8 +121,8 @@
   <div id="cookieConsent" class="cookie-consent-banner">
     <div class="container d-flex align-items-center justify-content-between">
       <p class="mb-0">
-        We use cookies to improve your experience on our site. By continuing to use our site, you accept our use of cookies.
-        <a href="cookie-policy.html" > Learn more</a>.
+        I use cookies to improve your experience on my site. By continuing to use my site, you accept my use of cookies.
+        <a href="cookie-policy.html"> Learn more</a>.
       </p>
       <button id="acceptCookies" class="btn btn-primary">Accept</button>
     </div>
@@ -134,15 +134,15 @@
     <div class="contact-hero-section my-5 py-5 px-3 mb-4">
       <h1>Contact Talk with Sian</h1>
       <p class="lead p-md-3 text-white">
-        We offer remote counselling services for women across North Wales. Reach out to schedule a session or to ask any questions you might have.
+        I offer remote counselling services for women across Chester &amp; Flintshire. Get in touch to schedule a session or ask any questions.
       </p>
-      <a href="services.html">Explore Our Services</a>
+      <a href="services.html">Explore My Services</a>
     </div>
 
     <div class="contact-form-section p-4 mb-4">
       <h2 class="text-center mb-3">Reach Out for Remote Session Enquiries</h2>
       <p class="text-center mb-4">
-        Please fill out the form below, and we will get back to you as soon as possible. 
+        Please fill out the form below, and I will get back to you as soon as possible.
         Your information is confidential and will be treated with the utmost care.
       </p>
 
@@ -164,7 +164,7 @@
           <input type="tel" name="phone" placeholder="Your Phone Number" required />
         </div>
         <div class="mb-3">
-          <textarea name="message" rows="5" placeholder="How can we help you?" required></textarea>
+          <textarea name="message" rows="5" placeholder="How can I help you?" required></textarea>
         </div>
         <div class="mb-3">
           <select name="preferred_contact" required>
@@ -186,12 +186,12 @@
     <div class="additional-info p-4 my-5">
       <h2 class="text-center mb-3">Additional Information</h2>
       <p>
-        For immediate assistance, feel free to call us at
+        For immediate assistance, feel free to call me at
         <a href="tel:+447754141453">07754 141453</a> or send an email to
         <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a>.
       </p>
       <p>
-        You can also visit our
+        You can also visit my
         <a href="https://g.co/kgs/yYnhWh6" target="_blank">Google Business Page</a>
         for reviews and more information.
       </p>
@@ -246,7 +246,7 @@
           >
         </div>
         <div class="col-md-4 mb-4">
-          <h5>Connect with Us</h5>
+          <h5>Connect with Me</h5>
           <p>Mobile: +44 7754 141453</p>
           <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
         </div>
