--- a/person-centred-therapy.html
+++ b/person-centred-therapy.html
@@ -133,7 +133,7 @@
 
     /* ========== Hero Section ========== */
     .hero-section {
-      background-image: url("images/person-centred-hero.jpg");
+      background-image: url("images/person-centred-therapy-hero.jpg");
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -319,7 +319,7 @@
     <div class="row align-items-center g-5 mb-5">
       <div class="col-md-6">
         <img
-          src="images/person-centred-2.jpg"
+          src="images/person-centred-therapy-in-chester-&-flintshire.jpg"
           alt="Person Centred Therapy in Chester & Flintshire"
           class="img-fluid rounded shadow"
         />
@@ -356,7 +356,7 @@
       </div>
       <div class="col-lg-6 text-center">
         <img
-          src="images/why-person-centred.jpg"
+          src="images/why-pct.jpg"
           alt="Why Person Centred Therapy"
           class="img-fluid rounded shadow"
         />
@@ -367,7 +367,7 @@
     <div class="row align-items-center mb-5 g-5">
       <div class="col-lg-6">
         <img
-          src="images/how-person-centred-works.jpg"
+          src="images/how-pct-works.jpg"
           alt="How Person Centred Therapy Works"
           class="img-fluid rounded shadow"
         />
@@ -404,7 +404,7 @@
       </div>
       <div class="col-md-6">
         <img
-          src="images/person-centred-remote.jpg"
+          src="images/pct-remote.jpg"
           alt="Remote Therapy"
           class="img-fluid rounded shadow"
         />
