improve seo for index and about page

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
-  <title>About Talk with Sian | Expert Therapy Services in Menai Bridge & Anglesey</title>
+  <!-- Updated Title & Meta for Improved SEO -->
+  <title>About Talk with Sian | Expert Therapy Services in Chester &amp; Flintshire</title>
   <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
   <link href="css/about.css" rel="stylesheet" />
   <link
@@ -16,37 +17,37 @@
 
   <meta
     name="description"
-    content="Learn about Talk with Sian, a trusted provider of therapy services in Menai Bridge, Anglesey. Discover my approach to compassionate and evidence-based therapy."
+    content="Learn about Talk with Sian, a trusted provider of therapy services in Chester &amp; Flintshire. Discover my approach to compassionate and evidence-based therapy from the best professional therapist. Connect today for expert guidance."
   />
   <meta
     name="keywords"
-    content="therapy Menai Bridge, counselling Anglesey, mental health services Anglesey, Sian Jones therapist, person centred therapy Menai Bridge, mindfulness therapy Anglesey"
+    content="therapy Chester, counselling Chester, mental health services Chester, Sian Jones therapist, person centred therapy Chester, mindfulness therapy Chester, best therapist, professional therapist, professional counselling, counselling Chester, therapy Flintshire"
   />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
-  <meta name="geo.placename" content="Menai Bridge, Anglesey, North Wales" />
-  <meta name="geo.position" content="53.2281;-4.1628" />
-  <meta name="ICBM" content="53.2281, -4.1628" />
+  <meta name="geo.placename" content="Chester, Flintshire, UK" />
+  <meta name="geo.position" content="53.1905;-2.8919" />
+  <meta name="ICBM" content="53.1905, -2.8919" />
   <meta
     property="og:title"
-    content="About Me | Talk with Sian – Trusted Therapy in Menai Bridge & Anglesey"
+    content="About Me | Talk with Sian – Trusted Therapy in Chester &amp; Flintshire"
   />
   <meta
     property="og:description"
-    content="Learn more about Talk with Sian and my approach to therapy. Serving clients in Menai Bridge and Anglesey with evidence-based and compassionate care."
+    content="Learn more about Talk with Sian and my approach to therapy. Serving clients in Chester &amp; Flintshire with evidence-based and compassionate care from the best professional therapist."
   />
-  <meta property="og:url" content="https://www.talkwithsian.com/about" />
+  <meta property="og:url" content="https://talkwithsian.com/about" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta
     name="twitter:title"
-    content="About Me | Talk with Sian – Trusted Therapy in Menai Bridge & Anglesey"
+    content="About Me | Talk with Sian – Trusted Therapy in Chester &amp; Flintshire"
   />
   <meta
     name="twitter:description"
-    content="Discover how Talk with Sian offers expert therapy services in Menai Bridge and Anglesey. Learn about my compassionate, person-centred approach."
+    content="Discover how Talk with Sian offers expert, evidence-based therapy services in Chester &amp; Flintshire. Connect with a trusted, professional female therapist today."
   />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
   <link rel="canonical" href="https://talkwithsian.com/about/" />
@@ -98,13 +99,13 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link active" href="about.html">About</a>
           </li>
 
           <!-- Services Dropdown -->
           <li class="nav-item dropdown">
             <a
-              class="nav-link dropdown-toggle active"
+              class="nav-link dropdown-toggle"
               href="#"
               id="servicesDropdown"
               role="button"
@@ -144,42 +145,28 @@
   <div class="container content-container flex-grow-1 d-flex-column align-items-center justify-content-center pt-5 mt-5">
 
     <div class="hero-section my-5">
-      <h1>Talk with Sian</h1>
+      <h1>About Talk with Sian – Your Expert Female Therapist in Chester &amp; Flintshire</h1>
       <p class="text-white">
-        My mission is to provide compassionate and personalised therapy to help
-        you achieve your best self. I combine evidence-based practices with a
-        heart-centred approach to support your mental health journey.
+        Committed to providing the best professional counselling and evidence-based therapy, I combine heart-centred care with proven techniques to help you thrive.
       </p>
+      <div class="text-center mt-4">
+        <a href="contact.html" class="cta-button">Book Your Free Consultation with the Best Professional Therapist in Chester &amp; Flintshire</a>
+      </div>
     </div>
 
     <div class="about-section" id="my-story">
-      <h2 class="text-center">My Story</h2>
+      <h2 class="text-center">My Story – A Journey of Professional Counselling in Chester &amp; Flintshire</h2>
       <p>
-        At Talk with Sian, I believe in the power of therapy to transform lives.
-        I founded my practice with the vision of creating a safe, supportive
-        space where you can explore your thoughts, emotions, and behaviours
-        without judgement. I am committed to providing high-quality care that is
-        tailored to your unique needs.
+        At Talk with Sian, I believe in the transformative power of expert, professional counselling. I founded my practice with a vision to create a safe, supportive space where evidence-based therapy meets compassionate care. With a commitment to excellence as one of the best therapists in Chester &amp; Flintshire, my journey has empowered countless individuals to achieve a thriving mental health journey.
       </p>
-      <p>
-        My approach to therapy is deeply rooted in empathy and understanding.
-        I believe in creating a collaborative environment where you feel heard
-        and supported. My journey into therapy began with a desire to help others
-        navigate mental health challenges and find fulfilment in their lives.
-      </p>
-      <div class="text-center mt-4">
-        <a href="contact.html" class="cta-button">Contact Me Today</a>
-      </div>
     </div>
 
     <div class="bio-section" id="bio">
       <div class="bio-card">
         <img src="images/sian.jpeg" alt="Sian Jones" class="img-fluid" />
-        <h3>Sian Jones, Licensed Therapist</h3>
+        <h3>Sian Jones – Trusted Female Therapist &amp; Professional Counsellor in Chester &amp; Flintshire</h3>
         <p>
-          With over 10 years of experience in the field of mental health,
-          I specialise in person centred therapy and mindfulness techniques.
-          I am dedicated to helping my clients achieve a balanced and fulfilling life.
+          With over 10 years of experience in the field of mental health, I specialise in person centred therapy and mindfulness techniques. I deliver professional counselling services designed to help you achieve balance and fulfilment, establishing myself as one of the best therapists in the region.
         </p>
         <a href="contact.html">Get in Touch</a>
       </div>
@@ -188,10 +175,7 @@
     <div class="about-section" id="cpd">
       <h2 class="text-center">My Ongoing Professional Development</h2>
       <p>
-        My dedication to providing the best possible care is reflected in my commitment
-        to ongoing professional development. Below is a selection of specialised training
-        and certifications that have helped shape my approach, ensuring I stay
-        at the forefront of the field.
+        My dedication to providing the best possible care is reflected in my commitment to ongoing professional development. Below is a selection of specialised training and certifications that have helped shape my approach, ensuring I stay at the forefront of the field.
       </p>
 
       <div class="accordion" id="cpdAccordion">
@@ -236,7 +220,7 @@
               aria-expanded="false"
               aria-controls="collapseTwo"
             >
-              Therapeutic Techniques & Approaches
+              Therapeutic Techniques &amp; Approaches
             </button>
           </h2>
           <div
@@ -247,9 +231,9 @@
           >
             <div class="accordion-body">
               <ul>
-                <li>EFT Level 1 & 2 (Mary-Jane Sharratt)</li>
+                <li>EFT Level 1 &amp; 2 (Mary-Jane Sharratt)</li>
                 <li>ACT Acceptance and Commitment Therapy (PCMHCS)</li>
-                <li>Walk & Talk Therapy (TACTA)</li>
+                <li>Walk &amp; Talk Therapy (TACTA)</li>
               </ul>
             </div>
           </div>
@@ -296,7 +280,7 @@
               aria-expanded="false"
               aria-controls="collapseFour"
             >
-              Ethics & Safeguarding
+              Ethics &amp; Safeguarding
             </button>
           </h2>
           <div
@@ -338,8 +322,8 @@
             <div class="accordion-body">
               <ul>
                 <li>Gender-Responsive Practice and Trauma-Informed Skills Training (Welsh Women's Aid)</li>
-                <li>Neuropsychology & Neurodiversity in Counselling (RASASC)</li>
-                <li>The Needs of Autistic and Neurodivergent Victims & Survivors (RASASC)</li>
+                <li>Neuropsychology &amp; Neurodiversity in Counselling (RASASC)</li>
+                <li>The Needs of Autistic and Neurodivergent Victims &amp; Survivors (RASASC)</li>
               </ul>
             </div>
           </div>
@@ -472,7 +456,6 @@
             </p>
           </div>
         </div>
-        <!-- Removed NVQ Level 2, National Certificate in Dental Nursing, and Secretarial Skills as requested -->
       </div>
     </div>
 
