--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Updated Title & Meta for Improved SEO -->
-    <title>Talk with Sian – Compassionate Therapy, Counselling & EFT Tapping in Chester & Cheshire</title>
+    <title>Talk with Sian – Expert Female Counselling & Therapy in Chester & Flintshire</title>
     <meta
       name="description"
-      content="Talk with Sian provides professional therapy and counselling services in Chester & Cheshire. Whether you are searching for a therapist near me, expert EFT Tapping, domestic abuse counselling, or CBT for depression, our bespoke treatments are designed for you."
+      content="Looking for a female counsellor in Chester & Flintshire? Talk with Sian offers expert, confidential therapy for women – specializing in EFT Tapping, trauma counselling, and person-centred support. Book your free consultation today."
     />
     <meta
       name="keywords"
@@ -24,11 +24,11 @@
     <!-- Open Graph / Facebook -->
     <meta
       property="og:title"
-      content="Talk with Sian – Compassionate Therapy, Counselling & EFT Tapping in Chester & Cheshire"
+      content="Talk with Sian – Expert Female Counselling & Therapy in Chester & Flintshire"
     />
     <meta
       property="og:description"
-      content="Discover expert therapy and counselling services in Chester & Cheshire with Talk with Sian. We specialise in EFT Tapping, domestic abuse counselling, CBT and more to help you live your best life."
+      content="Discover expert female counselling and confidential therapy for women in Chester & Flintshire. Specializing in EFT Tapping, trauma counselling, and person-centred therapy. Book your free consultation today."
     />
     <meta property="og:url" content="https://talkwithsian.com/" />
     <meta
@@ -42,11 +42,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Talk with Sian – Compassionate Therapy, Counselling & EFT Tapping in Chester & Cheshire"
+      content="Talk with Sian – Expert Female Counselling & Therapy in Chester & Flintshire"
     />
     <meta
       name="twitter:description"
-      content="From a therapist near me to specialised EFT Tapping and domestic abuse counselling, Talk with Sian offers tailored therapy and counselling services throughout Chester & Cheshire."
+      content="Looking for a trusted female counsellor in Chester & Flintshire? Talk with Sian offers confidential, expert therapy for women. Book your free consultation today."
     />
     <meta
       name="twitter:image"
@@ -214,13 +214,13 @@
 
       <!-- Hero Section -->
       <div class="hero-section my-4">
-        <h1>Empowering Women Through Compassionate Counselling</h1>
+        <h1>Expert Female Counselling in Chester &amp; Flintshire</h1>
         <p class="lead text-white">
-          Your trusted therapist and counsellor near you in Chester &amp; Flintshire.
+          Dedicated, confidential therapy for women seeking compassionate support in Chester &amp; Flintshire.
         </p>
-        <a class="btn btn-primary btn-lg my-5" href="services.html" role="button"
-          >Explore My Services</a
-        >
+        <a class="btn btn-primary btn-lg my-5" href="contact.html" role="button">
+          Book Your Session with the Best Female Therapist
+        </a>
       </div>
 
       <!-- Navigation Cards -->
@@ -232,12 +232,11 @@
                 src="images/talk-with-sian-services.jpg"
                 alt="Therapy Services in Chester"
               />
-              <h3>Counselling &amp; Therapy Services</h3>
+              <h3>Expert Counselling &amp; Therapy for Women</h3>
               <p class="py-0 py-lg-3 py-xl-0">
-                Explore a range of services including EFT Tapping, domestic abuse counselling,
-                person centred therapy and more tailored to your needs.
+                Discover tailored services including EFT Tapping, trauma-informed counselling, and person-centred therapy—designed exclusively for women in Chester &amp; Flintshire.
               </p>
-              <a href="services.html">Learn More</a>
+              <a href="services.html">Expert Counselling Services</a>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4">
@@ -246,10 +245,9 @@
                 src="images/talk-with-sian-about.jpg"
                 alt="About Sian, Therapist in Cheshire"
               />
-              <h3>About Me</h3>
+              <h3>Meet Sian – Your Trusted Female Counsellor</h3>
               <p>
-                Discover Sian’s approach to counselling, her BACP accreditation and her
-                commitment as a dedicated therapist in Chester &amp; Flintshire.
+                Learn about Sian’s compassionate, patient, and expert approach to therapy. As a fully BACP-accredited therapist, she is dedicated to empowering women in Chester &amp; Flintshire.
               </p>
               <a href="about.html">Meet Sian</a>
             </div>
@@ -262,8 +260,7 @@
               />
               <h3>Contact Me</h3>
               <p class="py-3 py-xl-0">
-                Get in touch today for a consultation. I am an experienced counsellor, here
-                to support you with my expert guidance.
+                Get in touch today for a consultation. I am an experienced counsellor in Chester & Flintshire, here to support you with my expert guidance.
               </p>
               <a href="contact.html">Get in Touch</a>
             </div>
@@ -273,7 +270,7 @@
 
       <!-- Testimonials Section -->
       <div class="testimonial-section">
-        <h2 class="text-center mx-auto">What My Clients Say About Therapy in Chester</h2>
+        <h2 class="text-center mx-auto">What My Clients Say About Therapy in Chester & Flintshire</h2>
         <div class="row justify-content-center">
           <div class="col-md-6">
             <div class="testimonial">
